--- a/posthog/pom.xml
+++ b/posthog/pom.xml
@@ -38,6 +38,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>1.49</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
@@ -79,6 +85,7 @@
           <version>2.22.1</version>
           <configuration>
               <trimStackTrace>false</trimStackTrace>
+              <argLine>-javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar</argLine>
           </configuration>
         </plugin>
         <plugin>
