--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 8
 
@@ -28,7 +28,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: Build with Maven
-        run: mvn package --file posthog/pom.xml -DskipTests -Dgpg.skip=true -Dmaven.javadoc.skip=true -B -V
+        run: mvn package --file posthog/pom.xml -DskipTests -Dgpg.skip=true -Dmaven.javadoc.skip=true --batch-mode --show-version
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
@@ -46,7 +46,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 8
 
@@ -64,7 +64,7 @@ jobs:
           path: posthog/target
 
       - name: Run tests
-        run: mvn test --file posthog/pom.xml -B -V
+        run: mvn test --file posthog/pom.xml --batch-mode --show-version
 
   release:
     name: Release to Maven Central
@@ -76,9 +76,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v3
         with:
           java-version: 8
+          distribution: 'adopt'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: GPG_PASSPHRASE
 
       - name: Cache Maven packages
         uses: actions/cache@v2
@@ -95,14 +101,8 @@ jobs:
 
       - name: Release to Maven Central
         # Only actually release if we are on the main branch, otherwise do a dry run
-        run: mvn deploy --file posthog/pom.xml -DskipTests -Dgpg.skip=true -Dmaven.javadoc.skip=true -B -V -Prelease -DdryRun=${{ github.ref != 'refs/heads/main' }}
+        run: mvn deploy --file posthog/pom.xml -DskipTests -Dgpg.skip=true -Dmaven.javadoc.skip=true --batch-mode --show-version -Prelease -DdryRun=${{ github.ref != 'refs/heads/main' }}
         env:
-          GPG_KEY_NAME: ${{ secrets.GPG_KEY_NAME }}
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-          OSSRH_JIRA_USERNAME: ${{ secrets.OSSRH_JIRA_USERNAME }}
-          OSSRH_JIRA_PASSWORD: ${{ secrets.OSSRH_JIRA_PASSWORD }}
-          OSSRH_STAGING_PROFILE_ID: ${{ secrets.OSSRH_STAGING_PROFILE_ID }}
-          OSSRH_STAGING_REPOSITORY_ID: ${{ secrets.OSSRH_STAGING_REPOSITORY_ID }}
-          OSSRH_STAGING_REPOSITORY_URL: ${{ secrets.OSSRH_STAGING_REPOSITORY_URL }}
-          OSSRH_STAGING_REPOSITORY_USERNAME: ${{ secrets.OSSRH_STAGING_REPOSITORY_USERNAME }}
-          OSSRH_STAGING_REPOSITORY_PASSWORD: ${{ secrets.OSSRH_STAGING_REPOSITORY_PASSWORD }}
