--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 8
+          distribution: 'adopt'
 
       - name: Cache Maven packages
         uses: actions/cache@v2
@@ -49,6 +50,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 8
+          distribution: 'adopt'
 
       - name: Cache Maven packages
         uses: actions/cache@v2
