MAVEN_USERNAME -> OSSRH_PASSWORD

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,5 +62,5 @@ jobs:
           fi
         env:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-          MAVEN_USERNAME: ${{ secrets.MAVEN_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.MAVEN_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
