--- a/posthog/pom.xml
+++ b/posthog/pom.xml
@@ -135,12 +135,12 @@
           </executions>
         </plugin>
         <plugin>
+          <!-- see https://maven.apache.org/maven-release/maven-release-plugin/perform-mojo.html -->
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
           <version>2.5.3</version>
           <configuration>
             <autoVersionSubmodules>true</autoVersionSubmodules>
-            <useReleaseProfile>false</useReleaseProfile>
             <releaseProfiles>release</releaseProfiles>
             <goals>deploy</goals>
           </configuration>
